# LandUsePolyMatching

./: CMakeLists.txt  Dockerfile  README.md
gui/: config.yaml  main.py  requirements.txt
gui/region_boundaries/: austria.gpkg  czechia.gpkg  denmark.gpkg  france.gpkg  netherlands.gpkg  nrw.gpkg  slovakia.gpkg
gui/src/: coloring.py  computing.py  create_index.py  gui.py  loader.py  matching_predecomposer.py
include/: cc_decomposition.h  cgal_includes.h  command_line_parser.h  linear_program.h  localization.h  shapefile_io_operations.h  solution.h  solver_context.h  solver_context_gurobi_access.h  threading.h  union_find.h
src/: cc_decomposition.cpp  command_line_parser.cpp  linear_program.cpp  linear_program_gurobi.cpp  linear_program_highs.cpp  localization.cpp  main.cpp  polygon_wh.cpp  shapefile_io_operations.cpp  solution.cpp  solver_context_gurobi.cpp  solver_context_highs.cpp  solver_context_singleton.cpp  threading.cpp
vis_tool/: index.html
